--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "asvl-app",
   "version": "0.1.0",
+  "homepage": "https://amzi-kwasi.github.io/al-app",
   "private": true,
   "dependencies": {
     "@formspree/react": "^2.4.1",
@@ -12,6 +13,7 @@
     "aos": "^2.3.4",
     "axios": "^1.4.0",
     "g": "^2.0.1",
+    "gh-pages": "^6.1.0",
     "jquery": "^3.6.3",
     "json-server": "^0.17.3",
     "react": "^18.2.0",
@@ -26,7 +28,7 @@
     "react-player": "^2.12.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.7.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-scroll-to-top": "^3.0.0",
     "react-simple-code-editor": "^0.13.1",
     "react-syntax-highlighter": "^15.5.0",
@@ -38,6 +40,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b main -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
