--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "asvl-app",
+  "name": "al-app",
   "version": "0.1.0",
   "homepage": "https://amzi-kwasi.github.io/al-app",
   "private": true,
@@ -41,6 +41,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
+    "deploy":"gh-pages -d build",
     "deploy": "gh-pages -b main -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
