--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "al-app",
   "version": "0.1.0",
-  "homepage": "https://amzi-kwasi.github.io/al-app",
+  "homepage": "https://amzi-kwasi.github.io/al-app/",
   "private": true,
   "dependencies": {
     "@formspree/react": "^2.4.1",
